fix overlapping issue as user swipe to right/left using mobile phone

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -8,6 +8,12 @@
   --muted:  #888888;
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background-color: var(--bg);
   color: var(--text);
